list 수정!